Final commit for 10.23.23 notes

--- a/10.23.23-html.html
+++ b/10.23.23-html.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- Not sure if notes will be two documents, 1 JS and 1 HTML -->
 <!-- Making an html doc to start with :> -->
+<!-- Ok I ended up making two sets of notes, one for terminal and one for HTML -->
 
 <html>
   <head>
@@ -19,4 +20,60 @@
     <p>Paragraph</p>
   </body>
 </html>
+
+<!-- 
+    All webpages are structured with HTML 
+    HTML allows us to organize our content
+    URL is the full address of a website
+    Home page is always index.html
+-->
+
+<!--
+    An element is a section of content defined w/ HTML
+    Pairs of tags are used to define the element
+    Opening is <tag> and closing is </tag>
+    Attributes go inside a tag and provide additional info about its content
+    All HTML files must have an <html> element enclosing <head> and <body>
+-->
+
+<!-- 
+    <header> us usually used for the major bar across the top, and soetimes contains <nav> menue
+    <foot> usually used for the major bar across the bottom
+-->
+
+<section>Good for encapuslating related content</section>
+<article>Similar, but the content would need to be able to stand on its own without the context of the entire page</article>
+<div>For any other small sections particularly when seperating content out for styling and layout purposes, which is useful with CSS</div>
+
+<!-- Common Tags -->
+<h1></h1> <h6></h6> <!-- For headlings, largest to smallest -->
+<p></p> <!-- Paragraphs -->
+<br /> <!-- For a line break. Self closing tag. -->
+
+<b></b> <!-- Bold -->
+<em></em> <!-- Emphasis -->
+<small></small> <!-- Tiny text! -->
+<span></span> <!-- To wrap text, without the styling a <p> tag would have -->
+
+<!-- Lists -->
+<ol></ol> <!-- Ordered list, numbered -->
+<ul></ul> <!-- Unordered list, bullet points -->
+<li></li> <!-- For each list item -->
+
+<!-- Tables -->
+<table></table> <!-- For a table -->
+<tr></tr> <!-- Inside each table for a row -->
+<th></th> <!-- For each cell -->
+<td></td> <!-- For each cell inside <tr> as a regular row -->
+
+<!-- There was an example of table code, look it up cause it looks weird/hard -->
+
+<img />
+<!-- src attribute sets the file path/name-->
+<!-- set the size before loading with the width and/or height attributes -->
+    <img src="lioden.png"/> etc 
+
+<a></a>
+<!-- href attribute sets the destination URL -->
+<!-- target="_blank" makes it open in new tab -->
 
